fixed y overflow bug in app

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,3 +98,13 @@ body{
   height: 100%;
 }
 
+#nav{
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
+#article{
+  min-height: 100vh;
+  max-height: 100vh;
+  overflow-y: scroll;
+}
